# Version History

## unreleased
* [LOW-385] Anything placeholder for more flexible assertions
* [MCCS-1285] Support mock devices in lightweight Tango test harness

## 0.4.1
* [LOW-341] Fix bug in MockCallable.configure_mock()

## 0.4.0
* [LOW-313] assert_against_call support for args and kwargs

## 0.3.0
* [LOW-282] Tango context managers

## 0.2.0
* [LOW-262] Improvements to diagnostics

## 0.1.3
* [LOW-270] garbage collection bugfix

## 0.1.2
* [LOW-245] poetry bugfix

## 0.1.1
* [REL-101] Metadata bugfix

## 0.1.0
* [LOW-234] Mock Tango event callbacks
* [LOW-235] Mock consumers
* [LOW-233] Mock callback groups
* [LOW-229] Bootstrap repo and set up RTD integration
* [LOW-233] Mock callbacks and callback groups